--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -2,5 +2,5 @@
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
     android:canRetrieveWindowContent="false"
     android:settingsActivity="tw.com.daxia.virtualsoftkeys.setting.MainActivity"
-    android:description="@string/action_settings" />
+    android:description="@string/accessibility_settings_content" />
 
