--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,16 +21,16 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/gesture_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginRight="5dp"
                 android:text="@string/setting_gesture_height_title"
                 android:textColor="@android:color/black"
                 android:textSize="22sp" />
@@ -39,10 +39,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_below="@+id/gesture_height"
+                android:padding="8dp"
                 android:text="@string/setting_gesture_height_content"
                 android:textColor="#828282"
                 android:textSize="16sp" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <SeekBar
             android:id="@+id/Seek_touch_area"
@@ -50,13 +52,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/stylus_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -69,11 +72,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_below="@+id/stylus_mode"
+                android:padding="8dp"
                 android:text="@string/setting_stylus_mode_content"
                 android:textColor="#828282"
                 android:textSize="16sp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
         <CheckedTextView
